--- a/web/src/main/resources/templates/login.html
+++ b/web/src/main/resources/templates/login.html
@@ -10,6 +10,9 @@
     <input type="password" name="password" placeholder="Password"/>
     <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
     <input type="submit"/>
+    <div th:if="${param.error}" th:text="#{AbstractUserDetailsAuthenticationProvider.badCredentials}">
+    </div>
+
 </form>
 </body>
 </html>
