--- a/web/src/main/resources/templates/user/signup.html
+++ b/web/src/main/resources/templates/user/signup.html
@@ -31,6 +31,8 @@ $(function(){
 
 		<label for="captcha">captcha:</label>
 		<input type="text" th:field="*{captcha}" />
+		<p th:if="${#fields.hasErrors('name')}" th:errors="*{captcha}">captcha error</p>
+
 		<img id='captchaImg' alt="captcha" src="/captcha/img"/>
  	   	<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
 		<input type="submit"/>
