--- a/web/src/main/resources/templates/user/changePassword.html
+++ b/web/src/main/resources/templates/user/changePassword.html
@@ -1,10 +1,22 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
+    <meta charset="UTF-8"/>
+    <title>Insert title here</title>
 </head>
 <body>
+<form method="post" th:object="${form}">
+	oldPassword:
+    <input type="password" th:field="*{oldPassword}"  placeholder="Username"/>
+    newPassword:
+    <input type="password" th:field="*{newPassword}" placeholder="Password"/>
+	confirm:
+    <input type="password" th:field="*{confirmPassword}" placeholder="Password"/>
 
+    <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
+
+    <input type="submit"/>
+
+</form>
 </body>
 </html>
