--- a/web/src/main/resources/templates/product/detail.html
+++ b/web/src/main/resources/templates/product/detail.html
@@ -40,6 +40,15 @@
 				}
 			});
 		});
+		$('#ajaxLogin').on('submit', function(event) {
+			$(this).serialize();
+			$.ajax({
+				url:'/ajaxLogin',
+				type:'post',
+				data:$(this).serialize()
+			});
+			return false;
+		});
 	});
 </script>
 </head>
@@ -49,5 +58,14 @@
 		<p th:text="*{name}">id</p>
 		<button id="addPrefer" th:attr="data-id=*{id}">click</button>
 	</div>
+	<form id="ajaxLogin" action="/login" method="post">
+	<input type="text" name="name" value="" placeholder="Username" />
+	<input type="password" name="password" placeholder="Password" /> 
+	<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" /> 
+	<input type="submit" />
+	<div th:if="${param.error}"
+		th:text="#{AbstractUserDetailsAuthenticationProvider.badCredentials}">
+	</div>
+</form>
 </body>
 </html>
