--- a/web/src/main/resources/templates/index.html
+++ b/web/src/main/resources/templates/index.html
@@ -6,5 +6,10 @@
 </head>
 <body>
 	<p>Hello Spring Boot!</p>
+
+<form action="/logout" method="post">
+    <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
+    <input type="submit" value='logout'/>
+</form>
 </body>
 </html>
