--- a/web/src/main/resources/templates/product/detail.html
+++ b/web/src/main/resources/templates/product/detail.html
@@ -41,7 +41,7 @@
 			});
 		});
 		$('#ajaxLogin').on('submit', function(event) {
-			$(this).serialize();
+			alert(22);
 			$.ajax({
 				url:'/ajaxLogin',
 				type:'post',
@@ -58,14 +58,11 @@
 		<p th:text="*{name}">id</p>
 		<button id="addPrefer" th:attr="data-id=*{id}">click</button>
 	</div>
-	<form id="ajaxLogin" action="/login" method="post">
-	<input type="text" name="name" value="" placeholder="Username" />
-	<input type="password" name="password" placeholder="Password" /> 
-	<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" /> 
+	<form id="ajaxLogin">
+        <input type="text" name="name" value="" placeholder="Username" />
+        <input type="password" name="password" placeholder="Password" /> 
+        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" /> 
 	<input type="submit" />
-	<div th:if="${param.error}"
-		th:text="#{AbstractUserDetailsAuthenticationProvider.badCredentials}">
-	</div>
-</form>
+	</form>
 </body>
 </html>
