change id from int to long

--- a/web/src/main/resources/templates/product/detail.html
+++ b/web/src/main/resources/templates/product/detail.html
@@ -22,7 +22,7 @@
 					event.preventDefault();
 					var productId = $(this).attr('data-id');
 					$.ajax({
-						url : '/user/preferProduct/' + productId,
+						url : '/ajax/preferProduct/' + productId,
 						type : 'post',
 						data : {
 							id : productId
