--- a/admin/src/main/resources/templates/productSubject/list.html
+++ b/admin/src/main/resources/templates/productSubject/list.html
@@ -3,7 +3,28 @@
 	<head>
 		<meta charset="UTF-8">
 		</meta>
+		<meta name="_csrf" th:content="${_csrf.token}" />
+		<meta name="_csrf_header" th:content="${_csrf.headerName}" />
 		<title>Insert title here</title>
+		<script src="/js/jquery-1.11.2.min.js"></script>
+		<script>
+			$(function() {
+				var token = $("meta[name='_csrf']").attr("content");
+				var header = $("meta[name='_csrf_header']").attr("content");
+				var id = $("meta[name='id']").attr("content");
+
+				$(document).ajaxSend(function(e, xhr, options) {
+					xhr.setRequestHeader(header, token);
+				});
+				$.ajax({
+					url : '/productSubject/list',
+					data : {
+						param : [1, 2, 3]
+					},
+					type : 'post'
+				});
+			});
+		</script>
 	</head>
 	<body>
 		<div th:each="l:${lists}">
