--- a/web/src/main/resources/templates/user/changePassword.html
+++ b/web/src/main/resources/templates/user/changePassword.html
@@ -1,22 +1,23 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8"/>
-    <title>Insert title here</title>
-</head>
-<body>
-<form method="post" th:object="${form}">
-	oldPassword:
-    <input type="password" th:field="*{oldPassword}"  placeholder="Username"/>
-    newPassword:
-    <input type="password" th:field="*{newPassword}" placeholder="Password"/>
-	confirm:
-    <input type="password" th:field="*{confirmPassword}" placeholder="Password"/>
+	<head>
+		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+		<title>Insert title here</title>
+	</head>
+	<body>
+		<form method="post" th:object="${form}">
+			oldPassword:
+			<input type="password" th:field="*{oldPassword}"  placeholder="Username"/>
+			<p th:if="${#fields.hasErrors('oldPassword')}" th:errors="*{oldPassword}">Incorrect date</p>
+			newPassword:
+			<input type="password" th:field="*{newPassword}" placeholder="Password"/>
+			confirm:
+			<input type="password" th:field="*{confirmPassword}" placeholder="Password"/>
+			<p th:if="${#fields.hasErrors('confirmPassword')}" th:errors="*{confirmPassword}">Incorrect date</p>
+			<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
 
-    <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
+			<input type="submit"/>
 
-    <input type="submit"/>
-
-</form>
-</body>
+		</form>
+	</body>
 </html>
