--- a/web/src/main/resources/templates/user/signup.html
+++ b/web/src/main/resources/templates/user/signup.html
@@ -1,41 +1,47 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-<title>Hello Spring Boot!</title>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<script src="/js/jquery-1.11.2.min.js"></script>
-<script>
-$(function(){
-	$('#captchaImg').click(function(event){
-		event.preventDefault();
-		var self=$(this);
-		var clone=self.clone(true);
-		self.after(clone);
-		self.remove();
-	});
-});
-</script>
-</head>
-<body>
-	<form th:action="@{/signup}" th:object="${form}" method="post" action="#">
-		<label for="name">name:</label>
-		<input type="text" th:field="*{name}" />
-		<p th:if="${#fields.hasErrors('name')}" th:errors="*{name}">name error</p>
+	<head>
+		<title>Hello Spring Boot!</title>
+		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+		<script src="/js/jquery-1.11.2.min.js"></script>
+		<script>
+			$(function() {
+				$('#captchaImg').click(function(event) {
+					event.preventDefault();
+					var self = $(this);
+					var clone = self.clone(true);
+					self.after(clone);
+					self.remove();
+				});
+			});
+		</script>
+	</head>
+	<body>
+		<form th:action="@{/signup}" th:object="${form}" method="post" action="#">
+			<label for="name">name:</label>
+			<input type="text" th:field="*{name}" />
+			<p th:if="${#fields.hasErrors('name')}" th:errors="*{name}">
+				name error
+			</p>
 
-		<label for="password">password:</label>
-		<input type="text" th:field="*{password}" />
+			<label for="password">password:</label>
+			<input type="text" th:field="*{password}" />
 
-		<label for="confirmPassword">confirmPassword:</label>
-		<input type="text" th:field="*{confirm}" />
-		<p th:if="${#fields.hasErrors('confirm')}" th:errors="*{confirm}">confirm error</p>
+			<label for="confirmPassword">confirmPassword:</label>
+			<input type="text" th:field="*{confirm}" />
+			<p th:if="${#fields.hasErrors('confirm')}" th:errors="*{confirm}">
+				confirm error
+			</p>
 
-		<label for="captcha">captcha:</label>
-		<input type="text" th:field="*{captcha}" />
-		<p th:if="${#fields.hasErrors('name')}" th:errors="*{captcha}">captcha error</p>
+			<label for="captcha">captcha:</label>
+			<input type="text" th:field="*{captcha}" />
+			<p th:if="${#fields.hasErrors('name')}" th:errors="*{captcha}">
+				captcha error
+			</p>
 
-		<img id='captchaImg' alt="captcha" src="/captcha/img"/>
- 	   	<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
-		<input type="submit"/>
-	</form>
-</body>
+			<img id='captchaImg' alt="captcha" src="/captcha/img"/>
+			<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
+			<input type="submit"/>
+		</form>
+	</body>
 </html>
