--- a/admin/src/main/resources/templates/advertisement/edit.html
+++ b/admin/src/main/resources/templates/advertisement/edit.html
@@ -39,7 +39,9 @@
 						data.context.text('Upload finished.');
 						var self = $(e.target);
 						var img = self.next('img');
-						img.attr('src', data.result.files[0].url);
+						var url = data.result.files[0].url;
+						img.attr('src', url);
+						$('form').append('<input name="coverImg" type="hidden" value="' + url + '"/>');
 					},
 					progressall : function(e, data) {
 						var progress = parseInt(data.loaded / data.total * 100, 10);
@@ -57,7 +59,7 @@
 			<input type="text" th:field="*{description}"/>
 			<input type="file" name="file" th:attr="data-url=@{/admin/images}" />
 			<img th:src="*{coverImg}" style="width:200px;height:100px"></img>
- 		   	<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
+			<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
 			<input type="submit"/>
 		</form>
 	</body>
