--- a/admin/src/main/resources/templates/advertisement/edit.html
+++ b/admin/src/main/resources/templates/advertisement/edit.html
@@ -32,9 +32,7 @@
 						data.context = $('<p/>').text('Uploading...').appendTo(document.body);
 						data.submit();
 					},
-					formData : {
-						id : $(this).attr('id')
-					},
+					method : 'post',
 					done : function(e, data) {
 						data.context.text('Upload finished.');
 						var self = $(e.target);
@@ -57,10 +55,10 @@
 			<input type="text" th:field="*{content.content}"/>
 			description:
 			<input type="text" th:field="*{description}"/>
-			<input type="file" name="file" th:attr="data-url=@{/admin/images}" />
-			<img th:src="*{coverImg}" style="width:200px;height:100px"></img>
 			<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
 			<input type="submit"/>
 		</form>
+		<input type="file" name="file" th:attr="data-url=@{/admin/__${#strings.toLowerCase(category)}__/advertisements/__*{id}__/coverImg}" />
+		<img th:src="${adv.coverImg}" style="width:200px;height:100px"></img>
 	</body>
 </html>
