extract upload logic

--- a/admin/src/main/resources/templates/advertisement/edit.html
+++ b/admin/src/main/resources/templates/advertisement/edit.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 	<head>
-		<meta charset="UTF-8">
-		</meta>
+		<meta charset="UTF-8"/>
 		<meta name="_csrf" th:content="${_csrf.token}" />
 		<meta name="_csrf_header" th:content="${_csrf.headerName}" />
 		<title>jQuery File Upload Example</title>
@@ -10,7 +9,6 @@
 		<script src="/js/vendor/jquery.ui.widget.js"></script>
 		<script src="/js/jquery.iframe-transport.js"></script>
 		<script src="/js/jquery.fileupload.js"></script>
-		<title>Insert title here</title>
 		<script>
 			$(function() {
 
