--- a/admin/src/main/resources/templates/subject/create.html
+++ b/admin/src/main/resources/templates/subject/create.html
@@ -1,43 +1,20 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 	<head>
+		<title>Insert title here</title>
 		<meta charset="UTF-8"/>
 		<meta name="_csrf" th:content="${_csrf.token}" />
 		<meta name="_csrf_header" th:content="${_csrf.headerName}" />
-		<title>Insert title here</title>
 		<script src="/js/jquery-1.11.2.min.js"></script>
 		<script src="/js/vendor/jquery.ui.widget.js"></script>
 		<script src="/js/jquery.iframe-transport.js"></script>
 		<script src="/js/jquery.fileupload.js"></script>
+		<script src="/js/ajaxSecurity.js"></script>
+		<script src="/js/fileUpload.js"></script>
 		<script>
 			$(function() {
-
-				var token = $("meta[name='_csrf']").attr("content");
-				var header = $("meta[name='_csrf_header']").attr("content");
-				var id = $("meta[name='id']").attr("content");
-
-				$(document).ajaxSend(function(e, xhr, options) {
-					xhr.setRequestHeader(header, token);
-				});
-
 				var abortButton = $('<button/>').text('abort').click(function() {
 
-				});
-
-				$('input[type="file"]').fileupload({
-					dataType : 'json',
-					add : function(e, data) {
-						data.context = $('<p/>').text('Uploading...').appendTo(document.body);
-						data.submit();
-					},
-					done : function(e, data) {
-						data.context.text('Upload finished.');
-						var self = $(e.target);
-					},
-					progressall : function(e, data) {
-						var progress = parseInt(data.loaded / data.total * 100, 10);
-						$('#progress .bar').css('width', progress + '%').text(progress + '%');
-					}
 				});
 			});
 		</script>
@@ -64,5 +41,6 @@
 			<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
 			<input type="submit"/>
 		</form>
+		<div th:include="fragments/footer::copy"></div>
 	</body>
 </html>
