change relationship between subject and product

--- a/admin/src/main/resources/templates/subject/create.html
+++ b/admin/src/main/resources/templates/subject/create.html
@@ -28,9 +28,9 @@
 	<body>
 		<form method="post" th:object="${subject}">
 			product1:
-			<input type="text" th:field="*{productSubject}"/>
+			<input type="text" th:field="*{products}"/>
 			product2:
-			<input type="text" th:field="*{productSubject}"/>
+			<input type="text" th:field="*{products}"/>
 			name:
 			<input th:field="*{name}"/>
 			audio:
