--- a/admin/src/main/resources/templates/category/list.html
+++ b/admin/src/main/resources/templates/category/list.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+layout:decorator="/layout/layout">
 	<head>
 		<meta charset="UTF-8">
 		</meta>
