--- a/admin/src/main/resources/templates/fragments/page.html
+++ b/admin/src/main/resources/templates/fragments/page.html
@@ -5,16 +5,10 @@
 		<title>Insert title here</title>
 	</head>
 	<body>
-		<div th:fragment="page(current,pages)">
-			<div th:if="${pages &lt; 7}" th:each="i:${#numbers.sequence(1,pages)}">
-				<li th:text="${i}"></li>
-			</div>
-			<div th:if="${pages > 7 and current &lt; 4}" th:each="i:${#numbers.sequence(1,current+4>7?7:current+4)}">
-				<li th:text="${i}"></li>
-			</div>
-			<div th:if="${pages > 7 and current &gt; pages-3 and current &lt; pages}" th:each="i:${#numbers.sequence(pages-7,pages)}">
-				<li th:text="${i}"></li>
-			</div>
+		<div th:fragment="page(current,begin,end)">
+			<ul th:each="i:${#numbers.sequence(begin,end)}">
+				<li th:class="${i}==current?activate" th:text="${i}">1</li>
+			</ul>
 		</div>
 	</body>
 </html>
