--- a/web/src/main/resources/templates/fragments/page.html
+++ b/web/src/main/resources/templates/fragments/page.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-<meta charset="UTF-8"></meta>
-<title>Insert title here</title>
-</head>
-<body>
-	<div th:fragment="page(begin,end)">
-		<ul th:each="num : ${#numbers.sequence(begin,end)}" th:if="${end &lt; 7}">
-			<li><a th:text="${num}"></a></li>
-		</ul>
-		<ul th:each="num : ${#numbers.sequence(begin,end)}" th:if="${end &gt; 7}">
-		</ul>
-	</div>
-</body>
+	<head>
+		<meta charset="UTF-8"/>
+		<title>Insert title here</title>
+	</head>
+	<body>
+		<div th:fragment="page(viewpage)">
+			<ul th:each="i:${#numbers.sequence(viewpage.begin,viewpage.end)}">
+				<li th:class="${i}==viewpage.current?activate" >
+					<a th:href="@{${viewpage.href}(pages=${i},size=15,__${viewpage.options}__)}" th:text="${i}"></a>
+				</li>
+			</ul>
+			<div th:text="${options}"></div>
+		</div>
+	</body>
 </html>
