--- a/web/src/main/resources/templates/instrument/create.html
+++ b/web/src/main/resources/templates/instrument/create.html
@@ -24,7 +24,18 @@
 	<body>
 		<form th:method="post" th:object="${instrument}">
 			<input type="text" th:field="*{name}"/>
+			<select th:field="*{brand}">
+				<option value="">--请选择--</option>
+				<option th:each="brand : ${brands}" th:value="${brand.id}" th:text="${brand.name}">brand</option>
+			</select>
 			<textarea th:id="content" th:field="*{content.content}"></textarea>
+			<select th:field="*{secondCategory}">
+				<option value="">--请选择--</option>
+				<option th:each="category:${categories}" th:value="${category.id}" th:text="${cateogry.id}">category</option>
+			</select>
+			<select th:field="*{thirdCategory}">
+				<option value="">--请选择--</option>
+			</select>
 			<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
 			<input type="submit"/>
 		</form>
